syntax = "proto3";

package internal.coordinator;

option go_package = "internal/shared/proto";


service CoordinatorService {
    rpc RegisterWorker(RegisterWorkerRequest) returns (RegisterWorkerResponse);
}

// Worker registration

message RegisterWorkerRequest {
    string worker_id = 1;
    string address = 2;

    int32 available_cpu_cores = 3;
    int32 available_memory_mb = 4;
}

message RegisterWorkerResponse {
    RegistrationStatus status = 1;

    string message = 2;
    int32 heartbeat_interval_seconds = 3;
}

enum RegistrationStatus {
    SUCCESS = 0;
    ALREADY_REGISTERED = 1;
    REJECTED = 2;
}